--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,8 @@ Pillow==7.2.0
 scikit_learn==0.23.2
 kaggle==1.5.6
 -e git+https://github.com/ildoonet/pytorch-gradual-warmup-lr.git#egg=pytorch-gradual-warmup-lr
+requests
+Flask
+oauthlib
+pyOpenSSL
+Flask-Login
